--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="first-block">
         <div class="header">
-            <div>Header Logo</div>
-            <ul>
+            <div class="logo">Header Logo</div>
+            <ul class="top-right">
                 <li><a href="#">Header link one</a></li>
                 <li><a href="#">Header link two</a></li>
                 <li><a href="#">Header link three</a></li>
@@ -19,10 +19,12 @@
         </div>
 
         <div class="content">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. 
+            <div class="left">
+                <div class="title-blue">This website is awesome</div>
+                <p>This website has some subtext that goes here under the main title. 
                 It's smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
+                <button>Sign up</button>
+            </div>
             <div class="image">This is a placeholder for an image</div>
         </div>
     </div>
