Second block added, img still bugged

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
     </div>
 
     <div class="second-block">
-        <h1>Some random information.</h1>
+        <div class='title'>Some random information.</div>
         <div class="four-images">
-            <img src="" alt="first">
-            <div>This is some subtext under an ilustration or an image</div>
-            <img src="" alt="first">
-            <div>This is some subtext under an ilustration or an image</div>
-            <img src="" alt="first">
-            <div>This is some subtext under an ilustration or an image</div>
-            <img src="" alt="first">
-            <div>This is some subtext under an ilustration or an image</div>
+            <img src="./images/bedru.jpg" alt="first">
+            <div class="text">This is some subtext under an ilustration or an image</div>
+            <img src="./images/fioio.jpg" alt="first">
+            <div class="text">This is some subtext under an ilustration or an image</div>
+            <img src="./images/iuna.jpg" alt="first">
+            <div class="text">This is some subtext under an ilustration or an image</div>
+            <img src="./images/puga.jpg" alt="first">
+            <div class="text">This is some subtext under an ilustration or an image</div>
         </div>
     </div>
 
