--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     </div>
 
     <div class="third-block">
-        <p>This is an inspiring quote, or a testimonial from a customer.
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer.
             Maybe it's just filling up space, or maybe people will actually reade it.
              Who knows? All i know is that it looks nice.
         </p>
 
-        <div>-Thor, God of Thunder</div>
+        <div class="author">-Thor, God of Thunder</div>
     </div>
 
     <div class="fourth-block">
