--- a/index.html
+++ b/index.html
@@ -32,14 +32,22 @@
     <div class="second-block">
         <div class='title'>Some random information.</div>
         <div class="four-images">
-            <img src="./images/bedru.jpg" alt="first">
-            <div class="text">This is some subtext under an ilustration or an image</div>
-            <img src="./images/fioio.jpg" alt="first">
-            <div class="text">This is some subtext under an ilustration or an image</div>
-            <img src="./images/iuna.jpg" alt="first">
-            <div class="text">This is some subtext under an ilustration or an image</div>
-            <img src="./images/puga.jpg" alt="first">
-            <div class="text">This is some subtext under an ilustration or an image</div>
+            <div class="block">
+                <img src="./images/bedru.jpg" alt="first">
+                <div class="text">This is some subtext under an ilustration or an image</div>
+            </div>
+            <div class="block">
+                <img src="./images/fioio.jpg" alt="first">
+                <div class="text">This is some subtext under an ilustration or an image</div>
+            </div>
+            <div class="block">
+                <img src="./images/iuna.jpg" alt="first">
+                <div class="text">This is some subtext under an ilustration or an image</div>
+            </div>
+            <div class="block">
+                <img src="./images/puga.jpg" alt="first">
+                <div class="text">This is some subtext under an ilustration or an image</div>
+            </div>
         </div>
     </div>
 
@@ -53,8 +61,11 @@
     </div>
 
     <div class="fourth-block">
-        <div>Call it to action! It's time!</div>
-        <div>Sign up for our product by clicking that button right over there!</div>
+        <div class="left-block">
+            <div class="first-line">Call it to action! It's time!</div>
+            <div class="second-line">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button>Sign up</button>
     </div>
 
     <div class="footer">
